tests/parser/parser-struct-error.swg
struct(var T : s32) A { } // swc-expected-error {{parser_err_gen_param_type}}

